kubernetes/apps/networking/proxmox/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: networking
  annotations:
    io.cilium/lb-ipam-ips: "192.168.42.10"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: &host proxmox-1.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxmox
              port:
                name: http
  tls:
    - hosts:
      - *host
      secretName: wildcard-cert-tls
